charts: prevent label overflow. Closes #784

--- a/app/assets/stylesheets/chart.sass
+++ b/app/assets/stylesheets/chart.sass
@@ -27,6 +27,7 @@
   .charts_container
     position: relative
     height: 400px
+    padding: 3px
     .chart_not_finished
       display: none
       position: absolute
